[tool.poetry]
name = "bluecap"
version = "0.1.0"
description = "Research data management"
authors = ["Andre Rico <97684721+AndreRicoPSU@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
